report - add "tableoffigure" and give number to each figure

--- a/ST50_Docs/rapport/ST50__ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50__ROMETPierre.tex
@@ -157,17 +157,26 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   \begin{itemize}
   \item Physique des particules: Frontière en énergie
   
-  	- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire.\newline
+  	- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire.
   	
-  	\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
+  	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
+    \includegraphics[width=9cm]{ATLASLHC.jpg}
+    \caption{Atlas}
+		\end{figure}
+  	
  	
  	- L'expérience CDF pour "Collider Detector at Fermilab" met en jeux un accélérateur de particule, nommé le "Tevatron", faisant accélérer et se collisioner, des prontons ainsi que des antiprotons. 	Il à pour but d'observer et de découvrir l'identité ainsi que les propriétés des particules qui compose l'univers, et de comprendre les interactions entre ces dernières.
- 	CDF est en particulier connue pour la d"couverte du "Quark Top" en 1994, confirmé par l'expérience "D0" l'année suivante.\newline
+ 	CDF est en particulier connue pour la d"couverte du "Quark Top" en 1994, confirmé par l'expérience "D0" l'année suivante.
  	
- 	\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline%
+    \includegraphics[width=11cm]{D0.jpg}
+    \caption{CDF}
+		\end{figure} 
  	
- 	\newpage
-  
   \item Physique des saveurs:
  
 	- "T2K" pour Tokai to Kamioka est une expérience de physique des particules situé au japon, dans laquelle collabore de nombreux pays. Il s'agit d'une expérience d'oscillation de neutrinos, mesurant un faisceau de neutrinos muoniques à courte (280 m) et longue distance (295 km). 
@@ -178,12 +187,14 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   	\textsc{\begin{figure}[h]
      \begin{minipage}[c]{.46\linewidth}
          \centering
-         \includegraphics[width=6cm]{T2K.jpg}
+         \includegraphics[width=4cm]{T2K.jpg}
+         \caption{T2K}
      \end{minipage}
      \hfill%
      \begin{minipage}[c]{.46\linewidth}
          \centering
-         \includegraphics[width=7cm]{SLACBABAR.png}
+         \includegraphics[width=4cm]{SLACBABAR.png}
+         \caption{SLAC}
      \end{minipage}
  	\end{figure}} 	
   
@@ -193,7 +204,13 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   
   Pour cela, le projet au sol "LSST", vise à l'observation répétée de l'ensemble du ciel visible, en s'affranchissant d'une partie des effets instrumentaux et atmosphérique. Il est basé sur un télescope au sol de 8.4 mètres de diamètre équipé d'une caméra de 3.2 milliard de pixels. L'ensemble, implanté au Chili, couvrira un champ de 9.6 degrés-carrés sur le ciel balayé à la cadence d'un champ toutes les 40 secondes. Chaque champ sera ainsi visité 1000 fois durant les 10 ans de prise de données du programme.\newline
     	
-  	\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
+    \includegraphics[width=6cm]{lsst.jpg}
+    \caption{LSST}
+		\end{figure} 
+  	
   \end{itemize}
   
     
@@ -227,7 +244,12 @@ De fait, nous ne souhaitons pas nous appuyer sur d’éventuelles lacunes du Ste
 La mécanique, de son coté, a peu évolué. L’utilisation de matériaux composites ou la modification de certaines pièces a parfois permis d’explorer quelques pistes (légèreté, coût, endurance, reproductivité) mais de manière limitée car le compromis actuel semble optimal compte tenu des contraintes imposées par la morphologie de l’instrument et de l’énergie qu’un artiste peut raisonnablement fournir pour l’actionner. Compte tenu de ces contraintes, l’ouverture vers de nouvelles expressions sonores par le biais de la mécanique ne semble pas
 avoir été explorée. Certains développements ont consisté à introduire des éléments passifs, aimants, ressorts, élastiques, à l’intérieur de la mécanique ou sous les touches, mais aucun n’a semblé apporter suffisamment pour emporter l’adhésion des techniciens et surtout des artistes.\newline
 
-\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO.png}\hss}\hfill\null\newline
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO.png}\hss}\hfill\null
+    \includegraphics[width=15cm]{MECA_PIANO.png}
+    \caption{Schéma de mécanique de Piano}
+		\end{figure} 
 
 Côté éléments actifs, l’essentiel des innovations concerne la reproduction autonome par l’instrument d’une musique jouée précédemment (sur lui même ou sur un instrument similaire), c’est la cas par exemple de la technologie "DisklavierTM" mise au point par Yamaha. Il n’y a pas d’interaction directe entre l’artiste et la mécanique augmentée. La mécanique de ces pianos enregistre le jeu de l’artiste puis le restitue sans son aide, avec une
 perte de sensibilité notable. Il n’y a donc pas d’exploration de nouvelles capacités sonores ou d’augmentation de la palette de couleur de l’instrument, bien au contraire. Notons cependant les explorations de certains chercheurs comme par exemple Andrew McPherson6 et son “Magnetic Resonator Piano” où des électroaimants placés au dessus des cordes les maintiennent en résonance sous le contrôle de l’interprète offrant ici très clairement de nouvelles options d’expression.
@@ -268,8 +290,14 @@ Le poids d’enfoncement d’une touche de clavier est compris entre 45g et 60g,
   \section{Mécanique et Electronique}
 Nos premières réflexions sur la réalisation d’un système d’assistance et d’asservissement d’une mécanique de piano à queue démontrent qu’il faut faire appel à des technologies de pointe. Ce qui explique l’aspect novateur de notre projet. Par exemple, les contraintes mécaniques sur les moteurs susceptibles de seconder les doigts dans leur action sont nombreuses. Pour ne citer que les plus essentielles :\newline
 
-\hfill\hbox to 0pt{\hss\includegraphics[width=13cm]{MECA_PIANO2.png}\hss}\hfill\null\newline
-%figure 2 : Une mécanique de type Renner avec un modèle 3D de l’actuateur linéaire
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=13cm]{MECA_PIANO2.png}\hss}\hfill\null
+    \includegraphics[width=13cm]{MECA_PIANO2.png}
+    \caption{Mécanique de Piano}
+		\end{figure} 
+
+%Une mécanique de type Renner avec un modèle 3D de l’actuateur linéaire
 %envisagé (en noir posé sur la touche) pour donner l’échelle. L’actuateur peut être soit intégré
 %dans le sommier en tête de la mécanique sous la cuillère d’étouffoir ou bien positionné à
 %l’arrière de celle-ci sur le sommier de cheville. Plusieurs positions seront étudiées. En insert
@@ -292,20 +320,23 @@ seconde, accélération de l’ordre de 10 ou 20 g (100 à 200 m/s2 ).
 
 Des moteurs avec ces caractéristiques sont disponibles aujourd’hui et font appel (entre autres) à de puissants aimants miniatures pour les mouvements et à des sondes à effet Hall intégrées pour le positionnement. La figure 2 montre un profil de mécanique (c’est a dire la mécanique complète d’une touche individuelle) de la marque Renner, d’autres modèles existent, notamment sur les Steinway, mais leurs caractéristiques essentielles sont semblables. Sur cette même figure, un modèle en impression 3D d’un moteur linéaire de la marque Faulhaber, aux performances mécaniques adaptées à notre problème, est posé sur la touche. On peut voir que ses dimensions sont idéalement adaptées à celles d’un clavier de piano.
 
-L’électronique qui permet la mesure du déplacements des touches (connectée à un capteur de position et/ou un accéléromètre) et qui contrôle l’asservissement doit elle aussi être rapide et  \newline
+L’électronique qui permet la mesure du déplacements des touches (connectée à un capteur de position et/ou un accéléromètre) et qui contrôle l’asservissement doit elle aussi être rapide et précise, si possible intégrée, fiable, puissante et programmable et fera donc appel à de la micro électronique compatible HT (100V) ainsi qu’à des FPGA pour la programmation de l’asservissement et le contrôle du toucher. L’expertise du LPNHE en électronique de pointe et mécanique de précision est un atout déterminant de cette réalisation.
 
-\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO3.png}\hss}\hfill\null\newline
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=15cm]{MECA_PIANO3.png}\hss}\hfill\null
+   \includegraphics[width=15cm]{MECA_PIANO3.png}
+    \caption{Mécanique de type Renner avec un modèle 3D de l’actuateur linéaire}
+		\end{figure}
+
 %Figure 3: une implémentation possible du moteur et des capteurs. Plusieurs types de
 %capteurs sont envisageables, accéléromètre sur la touche, capteur de pression entre la
 %touche et le pilote, capteur de position sous la touche. Nous étudierons les propriétés de
 %chacun et adopterons celui ou la combinaison de ceux qui donnent le meilleur rendu par
 %rapport au touché original.
 
-précise, si possible intégrée, fiable, puissante et programmable et fera donc appel à de la micro électronique compatible HT (100V) ainsi qu’à des FPGA pour la programmation de l’asservissement et le contrôle du toucher. L’expertise du LPNHE en électronique de pointe et mécanique de précision est un atout déterminant de cette réalisation.
-
 Pour guider les idées, un schéma envisageable d’implémentation est proposé sur la figure 3. L’implémentation optimale nécessite bien-sûr une étude plus approfondie, il s’agit simplement ici de se de fixer les idées. Le moteur et les capteurs de positions sont représentés par les rectangles bleus ou rouges. Sur cette proposition, le rapport (R) entre l’action du moteur et celui du marteau est le même que pour le doigt de l’artiste soit environ 5,5. Les modifications apportées à la mécanique originale sont minimales. Avec un réglage approprié, la sensation
 de toucher sera adaptable aux désirs de l’artiste et restera très proche des sensations offertes par la mécanique à répétition et ce même si les marteaux sont lourds car le moteur accompagne en le soutenant le mouvement de la touche mais ne s’y substitue pas totalement.
-\newpage
 
   \section{Boucle d'asservissement}
 
@@ -338,7 +369,7 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 %--------------------------------------------------------------------------------------
 \part{Projet "CHAMP", étude et caractérisation}
 
-	\chapter{Caractérisation du projet}
+	\chapter{Introduction au projet}
 	
 	\section{Synthèse et objectif du projet}
 	
@@ -349,22 +380,24 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	le milieu musical artisanal, représenté par Laurent Bessières détenteur du prestigieux titre d'Académicien Steinway.
 	De plus, depuis l'inauguration de la philharmonie de Paris en janvier 2015, Laurent en est l'accordeur référant de la philharmonie. Enfin, il travaille également avec d'autres prestigieuses salles, comme Steinway and Sons France, régie Pianos, la Salle Pleyel, la Salle Cortot ou le Studio de la grande Armée qui font régulièrement appel à ses services.	
 	
-	Au travers de cette rencontre, plus que de vouloir proposer un piano de concert connecté, nouvelle génération, le projet prend racine au travers d'une idée simple mais précise, élargir les possibilités de l'instrument en n'en modifiant la mécanique, tout en conservant inchangé, l'expérience utilisateur.
+	Au travers de cette rencontre, plus que de vouloir proposer un piano de concert connecté, nouvelle génération, le projet prend racine au travers d'une idée simple mais précise, élargir les possibilités de l'instrument en n'en modifiant la mécanique interne, tout en conservant inchangé, l'expérience utilisateur.
 	Pour cela, décision fut prise de s'appuyer sur les techniques et les technologies modernes afin de faire évoluer l'instrument, le piano.
 	
 	Ainsi, sans altérer l'expérience utilisateur, ce rapport étroit entre le musicien et son l'instrument, représentant de nombreuses années de pratique, les artistes auront à disposition des nouveaux moyens d'expression, offrant de nouvelles possibilités de jeux.
 	
 		\subsection{De nouveaux moyens d'expressions}
 		
-		Afin de proposer de nouveaux moyens d'expression, il a tout d'abord fallu identifier au sein du piano, l'élément qui une fois modifier, apporterait de nouvelles expériences de jeux.
+		Afin de proposer de nouveaux moyens d'expression, il a tout d'abord fallu identitfier au sein du piano, l'élément étant la source de l'identité "musicale" ; des harmoniques de l'instrument. C'est en modifiant, en retravaillant la mécanique autour de cette pièce, que nous pourrons apporter de nouvelles expériences de jeux.
+		
 		Grâce aux articles de spécialistes, précédemment cité, le marteau, plus que la touche ou le chevalet, apparaît comme éléments ayant l'incidence majeure sur l'harmonisation de l'instrument, au travers de son poids.
-		L'intégration de nouvelles technologies au sein du projet, aura donc pour but de permettre la variation de la masse du marteau, (et donc de son poids) afin de laisser libre cours à l'imagination du musicien, quand à l'harmonisation de l'instrument.
+		
+		L'intégration de nouvelles technologies au sein du projet, aura donc pour but de permettre une variation du poid du marteau, afin de fournir une large palette d'harmonique au musicien, qui n'aura plus qu'à laissé court à son imagination et à sa technique afin de tiret le meilleur de l'instrument lors de composition musicale.
 	
 	\section{Rôle au sein du projet}	
 	
 	Recruté en tant que stagiaire, assistant ingénieurs, sur ce projet. Mon rôle fut prendre connaissance du projet, étudier l'état de l'art quant aux recherches déjà effectué et d'avoir un regard critique sur ces dernières. Être force de propositions sur l'intégration de solutions techniques, sur des problématiques direct, ainsi que sur des fonctionnalités futur; les développer et enfin mener leurs intégrations au sein du projet.
 	
-	Lors de mon arrivée, l'équipe en place avait déjà commencé à travailler sur une preuve de concept, s'appuyant sur une base d'électronique analogique, cœur de métier du laboratoire. Mais suite à mon arrivée, nous avons ensemble, redéfini le cadre du projet, afin de garder les idées et concepts testés et approuvés lors cette première approche, tout en faisant évoluer le projet en basculant sur une base orientée électronique numérique, système embarqué.
+	Avant mon arrivée, l'équipe en place avait déjà commencé à travailler sur une preuve de concept, s'appuyant sur une base d'électronique analogique, cœur de métier du laboratoire. Mais suite à mon arrivée, nous avons ensemble, redéfini le cadre du projet, afin de garder les idées et concepts testés et approuvés lors cette première approche, tout en faisant évoluer le projet en basculant sur une base orientée électronique numérique, système embarqué.
 	
 	De plus, j'ai eu pour rôle de faire part de l'avancement de mon travail, ainsi que mes observations autour du projet, à mon maitre de stage et directeur de recherche, lors de réunion durant lesquels nous définissions ensemble l'avancement des différentes étapes et discutions de nouvelle(s) fonctionnalité(s) pouvant être intégré au projet.
 	
@@ -376,9 +409,16 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	Comme expliqué précédemment, suite à mon arrivé au LPNHE, j'ai commencer par prendre connaissance de l'architecture globale du projet (figure ci-dessous) et des concepts et idées qui avaient déjà étés pensé et proposé, ainsi que des diverses solutions techniques à l'étude concernant des choix de composants.
 	
 	J'ai ainsi commencer par travailler sur le développement de la chaine de contrôle la plus simple pouvant être mise en place, afin d'éprouver les choix et solutions techniques retenu.
-	Cette chaine, représentant l'action d'une touche du piano, ce comporte comme suivant: Un accéléromètre mesurant l'accélération du marteau, du à une force appliqué sur une touche du piano, communiquant avec une carte programmable munie d'un FPGA, appliquant un filtre numérique sur les données reçu, pour ensuite les faire parvenir à un convertisseur numérique analogique (CAN), assurant la transmission des données à notre contrôleur moteur.
+	Cette chaine, représentant l'action d'une touche du piano, ce comporte comme suivant: Un accéléromètre mesurant l'accélération du marteau, (du à une force appliqué sur une touche du piano) communiquant avec une carte programmable munie d'un FPGA, appliquant un filtre numérique sur les données reçu, pour ensuite les faire parvenir à un convertisseur numérique analogique (CAN), assurant la transmission des données à notre contrôleur moteur.\newline
 	
-	\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{CH.png}\hss}\hfill\null\newpage
+	\begin{figure}[!ht]
+    \center
+    %\hfill\hbox to 0pt{\hss\includegraphics[width=17cm]{CH.png}\hss}\hfill\null
+  	\includegraphics[width=17cm]{CH.png}
+    \caption{Chaine de contôle d'une touche de Piano}
+		\end{figure}
+	
+	
 	
 	Ainsi, la toute première tâche réalisé fut de mener une étude de cas entre les deux bus de communication à disposition, le bus I2C et le bus SPI, afin de déterminer lequel serai le plus adapter à notre projet.
 	
@@ -386,7 +426,7 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	
 	La suite logique à cette étape, fut d'étudier le bus de communication sélectionné, afin de l'instancier au sein du projet, en ce basant sur le langage VHDL. Ce bus de communication étant présent en deux endroit de la chaine, entre l'accéléromètre et la carte programmable FPGA et entre cette dernière et notre convertisseur numérique analogique, notre intégration devais répondre aux spécificités des deux cas d'utilisations, afin de ne pas faire doublons dans la mise en place de solution, ainsi que dans les potentiels sources d'erreurs.
 	
-	Puis, après avoir éprouver l'échange de données, entre les différentes entités, un filtrage numérique fut intégré au à notre carte programmable. Ce filtrage ayant pour but de mettre en place un asservissement numérique sur le contrôle des moteur.
+	Puis, après avoir éprouver l'échange de données, entre les différentes entités, un filtrage numérique fut intégré à notre carte programmable. Ce filtrage ayant pour but de mettre en place un asservissement numérique sur le contrôle des moteur.
 	
 %	Par la suite, nous avons choisi de mettre en place une solution de monitoring, afin de pouvoir visualiser nos données échangés ,en temps réel sur un ordinateur.
 
@@ -394,23 +434,25 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	
 	Enfin, une étude de "rétro-engineering", fut mené en salle de teste sur des éléments électroniques tiers, fournie par notre partenaire technique, l'entreprise "Faulhaber", afin d'en vérifier le bon fonctionnement, mais également d'en valider le comportement vis-à-vis de l'utilisation souhaité.
 	
-	Mais comme expliqué en ce début de partie, ce module, illustré ci-dessus, n'est que 1/12 ème du prototype final; ne permettant la récupération et le traitement que d'un seul accéléromètre à la fois et donc, d'une seul touche à la fois.\newline	
+	Mais comme expliqué en ce début de partie, ce module, illustré ci-dessus, n'est que 1/12 ème du prototype final; ne permettant la récupération et le traitement que d'un seul accéléromètre à la fois et donc, d'une seul touche à la fois.
+	
 	La maquette à réaliser étant composé de 12 touches, il nous faudra par la suite, généraliser notre module afin de récupérer et traiter les informations de nos 12 touches, de manière parallèle.
-	Ce travail étant un peu plus complexe que le module précédemment présenté, il a demandé une refonte d'une partie de la chaine, vis-à-vis de l'échange de données entre la carte programmable (FPGA) et le convertisseur numérique analogique (CNA).
+	Ce travail étant un peu plus complexe que le module précédemment présenté, il demande une refonte d'une partie de la chaine, vis-à-vis de l'échange de données entre la carte programmable (FPGA) et le convertisseur numérique analogique (CNA).
 	
 	\chapter{Planning}
 
 	Ci-dessous sont présenté sous forme de diagramme de Gant, le calendrier prévisionnel ainsi que le calendrier réel du travail réalisé tout au long su stage.
 	On y retrouve un descriptif complet et détaillé des différentes tâches réalisés.
 	
+	On peut observer sur le calendrier réel, que les phases de test, de débug, n'avait pas été prise en compte lors de l'établissement du calendrier prévisionnel.
+	A l'avenir, ces tâches ne seront plus négligé, étant donné le caractère important de celles-ci, du fait de leurs capacité à bloquer l'avancement d'un projet, et induire des retards plus ou moins important.
+	
 	\includepdf[scale=1, pages=-]{calendrier_Previsionnel_defA}
 	\includepdf[scale=1, pages=-]{calendrier_Previsionnel_defB}
 	
 	\includepdf[scale=1, pages=-]{calendrier_reel_defA}
-	\includepdf[scale=1, pages=-]{calendrier_reel_defB}
+	\includepdf[scale=1, pages=-]{calendrier_reel_defB}	
 	
-	On peut observer sur le calendrier réel, que les phases de test, de débug, n'avait pas été prise en compte lors de l'établissement du calendrier prévisionnel.
-	A l'avenir, ces tâches ne seront plus négligé, étant donné le caractère important de celles-ci, du fait de leurs capacité à bloquer l'avancement d'un projet, et induire des retards plus ou moins important.
 	
 	
 	
@@ -419,9 +461,9 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 %	Présentation et Détail des travaux Réalisés durant le stage
 %
 %--------------------------------------------------------------------------------------
+
 	
-	\part{Travaux et réalisation}
-	
+	\part{Travaux et réalisation}	
 	
 	
 
@@ -590,9 +632,14 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 
 \part{Bibliographie}
 
-Descriptif global du projet:
-BHLS-CNRS-UPMC-LPNHE-IRCAM.pdf
+	\begin{itemize}
+		\item Descriptif global du projet: BHLS-CNRS-UPMC-LPNHE-IRCAM.pdf
+	\end{itemize}
 
+
+\part{Table des figures}
+
+	\listoffigures
 
 
 
