report - correct some trubble ready to start work description

--- a/ST50_Docs/rapport/ST50__ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50__ROMETPierre.tex
@@ -163,7 +163,7 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
     \includegraphics[width=9cm]{ATLASLHC.jpg}
-    \caption{Atlas}
+    \caption{Expérience Atlas}
 		\end{figure}
   	
  	
@@ -174,7 +174,7 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline%
     \includegraphics[width=11cm]{D0.jpg}
-    \caption{CDF}
+    \caption{Expérience CDF (Collider Detector at Fermilab)}
 		\end{figure} 
  	
   \item Physique des saveurs:
@@ -188,13 +188,13 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
      \begin{minipage}[c]{.46\linewidth}
          \centering
          \includegraphics[width=4cm]{T2K.jpg}
-         \caption{T2K}
+         \caption{Expérience T2K (Tokai to Kamioka)}
      \end{minipage}
      \hfill%
      \begin{minipage}[c]{.46\linewidth}
          \centering
-         \includegraphics[width=4cm]{SLACBABAR.png}
-         \caption{SLAC}
+         \includegraphics[width=5cm]{SLACBABAR.png}
+         \caption{Expérience SLAC (ou BABAR)}
      \end{minipage}
  	\end{figure}} 	
   
@@ -207,8 +207,8 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
 	\begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
-    \includegraphics[width=6cm]{lsst.jpg}
-    \caption{LSST}
+    \includegraphics[width=5cm]{lsst.jpg}
+    \caption{Projet LSST (Large Synoptic Survey Telescope)}
 		\end{figure} 
   	
   \end{itemize}
@@ -231,8 +231,10 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   C’est en 1700 que Bartolomeo Cristofori invente la mécanique à échappement et construit le premier instrument à cordes frappées : le piano-forte. Ce sont les balbutiements de l’histoire du piano à queue. Le piano-forte révolutionne la technique pianistique car il permet à l’interprète de passer par le jeu des doigts, d’une nuance piano à une nuance forte, ouvrant de nouvelles voies à l’expression musicale et à la créativité des compositeurs. Cent vingt-trois ans plus tard, en 1821, Sébastien Érard ajouta un système de répétition à la mécanique de Cristofori et invente la mécanique moderne dite (improprement) à double échappement.
 
 A la même époque, deux progrès techniques et industriels vont donner naissance au piano moderne. D’une part l’utilisation d’acier fondu pour les cordes et d’autre part l’introduction de cadres métalliques en fonte. Par ailleurs, de nombreux brevets seront déposés concernant la table d’harmonie, le croisement des cordes, le chevalet, l’assemblage de la mécanique, etc. 
+
 De telle sorte, que peu avant 1890, l’essentiel de ce qui fait un piano moderne est accompli. A partir de cette date et à la suite d’une concentration industrielle de plus en plus forte, la nécessité de produire le plus d’instruments possible au moindre coût pour garantir plus de parts de marchés, les innovations vont essentiellement cesser et conduire en moins d’un siècle à la disparition de presque tous les facteurs artisanaux et à l’uniformisation quasi totale des instruments avec pour référence le piano de concert Steinway dont le modèle produit en 1877 réunissait déjà les inventions les plus importantes du XIXe siècle.
 
+\newpage
 On peut légitimement se demander quelles sont les lacunes du Steinway d’aujourd’hui, joué par 95\% des pianistes de la planète, qui justifieraient de bouleverser l’état actuel.
 De fait, nous ne souhaitons pas nous appuyer sur d’éventuelles lacunes du Steinway ou d’ailleurs de tout autre piano, nous voulons avant tout ouvrir de nouvelles pistes. 
  Ceci en introduisant une source extérieure d’énergie, totalement et délicatement pilotée par l’instrumentiste, nous allons libérer des contraintes auquelles les pianos modernes, les Steinway en particulier, ont répondu de manière optimale, mais qu’ils ont malgré tout intégré.
@@ -293,7 +295,7 @@ Nos premières réflexions sur la réalisation d’un système d’assistance et
 	\begin{figure}[!ht]
     \center
     %\hfill\hbox to 0pt{\hss\includegraphics[width=13cm]{MECA_PIANO2.png}\hss}\hfill\null
-    \includegraphics[width=13cm]{MECA_PIANO2.png}
+    \includegraphics[width=10cm]{MECA_PIANO2.png}
     \caption{Mécanique de Piano}
 		\end{figure} 
 
@@ -318,7 +320,7 @@ seconde, accélération de l’ordre de 10 ou 20 g (100 à 200 m/s2 ).
 \item fiabilité : durée de vie de milliers d'heures et plus de 10 millions de mouvements.
 \end{itemize}
 
-Des moteurs avec ces caractéristiques sont disponibles aujourd’hui et font appel (entre autres) à de puissants aimants miniatures pour les mouvements et à des sondes à effet Hall intégrées pour le positionnement. La figure 2 montre un profil de mécanique (c’est a dire la mécanique complète d’une touche individuelle) de la marque Renner, d’autres modèles existent, notamment sur les Steinway, mais leurs caractéristiques essentielles sont semblables. Sur cette même figure, un modèle en impression 3D d’un moteur linéaire de la marque Faulhaber, aux performances mécaniques adaptées à notre problème, est posé sur la touche. On peut voir que ses dimensions sont idéalement adaptées à celles d’un clavier de piano.
+Des moteurs avec ces caractéristiques sont disponibles aujourd’hui et font appel (entre autres) à de puissants aimants miniatures pour les mouvements et à des sondes à effet Hall intégrées pour le positionnement. La figure 5.2 montre un profil de mécanique (c’est a dire la mécanique complète d’une touche individuelle) de la marque Renner, d’autres modèles existent, notamment sur les Steinway, mais leurs caractéristiques essentielles sont semblables. Sur cette même figure, un modèle en impression 3D d’un moteur linéaire de la marque Faulhaber, aux performances mécaniques adaptées à notre problème, est posé sur la touche. On peut voir que ses dimensions sont idéalement adaptées à celles d’un clavier de piano.
 
 L’électronique qui permet la mesure du déplacements des touches (connectée à un capteur de position et/ou un accéléromètre) et qui contrôle l’asservissement doit elle aussi être rapide et précise, si possible intégrée, fiable, puissante et programmable et fera donc appel à de la micro électronique compatible HT (100V) ainsi qu’à des FPGA pour la programmation de l’asservissement et le contrôle du toucher. L’expertise du LPNHE en électronique de pointe et mécanique de précision est un atout déterminant de cette réalisation.
 
@@ -352,6 +354,8 @@ L’échappement et la façon dont il se déroule constituent l’épicentre de 
 
 Sur tous ces domaines, l’expertise de Laurent Bessières est fondamentale aussi bien pour identifier les paramètres de contrôle que pour qualifier leur gamme et pour la bonne intégration de l’ensemble dans l’instrument. La programmation des fonctionnalités dans le FPGA qui calculera les commandes du moteur à partir des données des capteurs sera elle réalisée par les ingénieurs du LPNHE.
 
+\newpage
+
   \section{Modélisation}
 
 Thomas Hélie, chercheur à l’IRCAM au Laboratoire des Sciences et Technologies de la Musique et du Son, est spécialiste de la modélisation physique d’instruments de musique. L’un de ses projets de recherche concerne notamment la modélisation, l’asservissement et la commande d’une bouche artificielle robotisé pour le jeux de cuivre. Dans le cadre de notre projet son expertise nous permettra de modéliser les performances de la boucle de feedback en fonction des paramètres mécaniques que nous pouvons ajuster (position de l’actuateur, nombre, nature et position des capteurs). Disposer d’un modèle nous permettra de choisir les configurations les plus prometteuses avant de les réaliser plutôt que d’avoir à toutes les construire et toutes les essayer.
@@ -359,6 +363,8 @@ Thomas Hélie, chercheur à l’IRCAM au Laboratoire des Sciences et Technologie
 La méthode des systèmes Hamiltionien à ports (Port Hamiltonian System ou PHS) nous permettra de réaliser ces modèles. Cette approche où le système physique étudié est représenté par un ensemble de composants (éléments stockant de l’énergie, éléments dissipatifs, sources externes) reliés par des connexions conservatives (bilan d’énergie ou de puissance) permet une modélisation numérique relativement simple des systèmes complexes. Cette représentation garantie par ailleurs que les lois de conservations sont satisfaites à toutes les interfaces. La modularité du PHS permet d’envisager une complexité graduelle de la modélisation jusqu’à représenter de manière très réaliste l’ensemble touche, chevalet, marteaux ainsi que les commandes d’étouffoir et les ressort de rappel. Dans ce cadre nous nous appuierons également sur les travaux de Xavier Boutillon concernant la modélisation extrêmement réaliste du toucher des mécaniques de piano à queue.
 
 Notons également que l’approche PHS permet d’étudier les réponses non linéaires aux actions extérieures et de calculer les (pré-)contraintes à appliquer sur le signal d’entrée pour obtenir la réponse souhaitée (platitude). Cette approche nous permettra alors de calculer avec précision les paramètres de la boucle d’asservissement. Là encore l’expertise de Thomas Hélie nous permettra d’élaborer ces modèles de manière efficace et optimale.
+
+
 
 %--------------------------------------------------------------------------------------
 %
@@ -385,7 +391,9 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 	
 	Ainsi, sans altérer l'expérience utilisateur, ce rapport étroit entre le musicien et son l'instrument, représentant de nombreuses années de pratique, les artistes auront à disposition des nouveaux moyens d'expression, offrant de nouvelles possibilités de jeux.
 	
-		\subsection{De nouveaux moyens d'expressions}
+	\newpage
+	
+		\subsection{Un nouveau moyen d'expression}
 		
 		Afin de proposer de nouveaux moyens d'expression, il a tout d'abord fallu identitfier au sein du piano, l'élément étant la source de l'identité "musicale" ; des harmoniques de l'instrument. C'est en modifiant, en retravaillant la mécanique autour de cette pièce, que nous pourrons apporter de nouvelles expériences de jeux.
 		
@@ -630,6 +638,14 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 %Concernant les contraintes techniques devant c
 
 
+%--------------------------------------------------------------------------------------
+%
+%	Elément de fin de document
+%		Bibliographie
+%		Table des figures
+%
+%--------------------------------------------------------------------------------------
+
 \part{Bibliographie}
 
 	\begin{itemize}
@@ -644,18 +660,3 @@ Notons également que l’approche PHS permet d’étudier les réponses non lin
 
 
 \end{document}
-
-%\hfill\hbox to 0pt{\hss\includegraphics[width=7cm]{SPI1.png}\hss}\hfill\null\newline
-
-%Mettre deux éléments l'un à coté de l'autre horizontalement
-% \textsc{\begin{figure}[h]
-%     \begin{minipage}[c]{.46\linewidth}
-%         \centering
-%         \includegraphics[width=7cm]{tp1_g1.png}
-%     \end{minipage}
-%     \hfill%
-%     \begin{minipage}[c]{.46\linewidth}
-%         \centering
-%         \includegraphics[width=7cm]{tp1_g2.png}
-%     \end{minipage}
-% \end{figure}}
